Fixed socials spacing.

--- a/huddle-landing-page-with-single-introductory-section-master/style.css
+++ b/huddle-landing-page-with-single-introductory-section-master/style.css
@@ -87,30 +87,39 @@ button:hover {
     background-size: contain;
     grid-template-rows: 90px auto auto;
   }
+
   .logo {
     padding: 35px 0 0 35px;
   }
+
   main {
     align-items: start;
     padding-bottom: 40px;
   }
+
   .hero-image-container {
     line-height: 0;
   }
+
   .hero-image {
     width: 80%;
     margin: 0 auto;
     padding: 10px 20px 0 20px;
   }
+
   .hero-content-container {
     text-align: center;
     padding: 0 30px;
   }
+
   button {
     padding: 15px 100px;
   }
+
   .socials-container {
     justify-content: center;
-    padding: 0 20px 20px 10px;
+    padding: 0 20px 20px 20px;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
